--- a/aoc23-haskell.cabal
+++ b/aoc23-haskell.cabal
@@ -13,7 +13,7 @@ library aoc23
     exposed-modules:  Aoc23Solutions
     build-depends:    base ^>=4.17.2.1
     hs-source-dirs:   src
-    other-modules:    Day01
+    other-modules:    Day01, Day02
     default-language: Haskell2010
 
 test-suite aoc23-test
