--- a/aoc23-haskell.cabal
+++ b/aoc23-haskell.cabal
@@ -13,7 +13,7 @@ library aoc23
     exposed-modules:  Aoc23Solutions
     build-depends:    base ^>=4.17.2.1, split ^>=0.1.2.3
     hs-source-dirs:   src
-    other-modules:    Day01, Day02, Day03
+    other-modules:    Day01, Day02, Day03, Day04
     default-language: Haskell2010
 
 test-suite aoc23-test
