--- a/aoc23-haskell.cabal
+++ b/aoc23-haskell.cabal
@@ -11,7 +11,7 @@ common warnings
 library aoc23
     import:           warnings
     exposed-modules:  Aoc23Solutions
-    build-depends:    base ^>=4.17.2.1, split ^>=0.2.5
+    build-depends:    base ^>=4.17.2.1, containers ^>=0.7, split ^>=0.2.5
     hs-source-dirs:   src
     other-modules:    Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08
     default-language: Haskell2010
