--- a/aoc23-haskell.cabal
+++ b/aoc23-haskell.cabal
@@ -15,7 +15,7 @@ library aoc23
     hs-source-dirs:   src
     other-modules:    Day01, Day02, Day03, Day04, Day05, Day06, Day07, Day08, Day09, Day10, Day11,
                       Day12
-    default-language: Haskell2010
+    default-language: GHC2021
 
 test-suite aoc23-test
     import:           warnings
